feat: setup entities & domain events

--- a/src/Schedules.Users.Core/Schedules.Users.Core.csproj
+++ b/src/Schedules.Users.Core/Schedules.Users.Core.csproj
@@ -1,2 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <ItemGroup>
+    <PackageReference Include="Schedules.Nuget.Abstractions" />
+    <PackageReference Include="Schedules.Nuget.Enums" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Dal\" />
+  </ItemGroup>
 </Project>
