--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,19 +1,24 @@
 ﻿<Project>
-	<PropertyGroup>
-		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-	</PropertyGroup>
-	<ItemGroup>
-		<PackageVersion Include="EFCore.NamingConventions" Version="9.0.0" />
-		<PackageVersion Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
-		<PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
-		<PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-		<PackageVersion Include="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
-	</ItemGroup>
-	<!-- Testing nugets-->
-	<ItemGroup>
-		<PackageVersion Include="coverlet.collector" Version="6.0.2" />
-		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-		<PackageVersion Include="xunit" Version="2.9.2" />
-		<PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2" />
-	</ItemGroup>
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageVersion Include="EFCore.NamingConventions" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
+    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
+  </ItemGroup>
+  <!-- Testing nugets-->
+  <ItemGroup>
+    <PackageVersion Include="coverlet.collector" Version="6.0.2" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageVersion Include="xunit" Version="2.9.2" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2" />
+  </ItemGroup>
+  <!-- Schedule nugets-->
+  <ItemGroup>
+    <PackageVersion Include="Schedules.Nuget.Abstractions" Version="1.0.2" />
+	<PackageVersion Include="Schedules.Nuget.Enums" Version="1.0.0" />
+  </ItemGroup>
 </Project>
