--- a/NuGet.Config
+++ b/NuGet.Config
@@ -9,6 +9,9 @@
     <packageSource key="nuget.org">
       <package pattern="Microsoft.*" />
       <package pattern="SonarAnalyzer.CSharp" />
+      <package pattern="Npgsql" />
+      <package pattern="Npgsql.EntityFrameworkCore.PostgreSQL" />
+      <package pattern="EFCore.NamingConventions" />
     </packageSource>
 
     <packageSource key="TkachukOleksandr">
